# Phasespace_Object_Server

./: CMakeLists.txt  README.txt  manifest.xml  package.xml
msg/: ObjectDigest.msg  ObjectInfo.msg  Quaternion.msg
scripts/: main.py
src/: add_manual.cpp  add_object.cpp  add_points.cpp  box_filled.cpp  collides.cpp  delete_object.cpp  load_env.cpp  load_object.cpp  save.cpp  save.h  save_env.cpp  save_object.cpp  server.cpp
src/PhaseSpace/: DefaultType.cpp  DefaultType.h  Glove.h  GloveType.cpp  GloveType.h  ManualObject.cpp  ManualObject.h  Object.cpp  Object.h  ObjectClass.h  ObjectType.cpp  ObjectType.h  PSObject.cpp  PSObject.h  Point.cpp  Point.h  owlAux.h  quaternion.cpp  quaternion.h
src/gtests/: .PointTest.cpp.swp  DefaultObjectTest.cpp  GloveTest.cpp  ObjectTest.cpp  PSObjectTest.cpp  PointTest.cpp  QuatTest.cpp  ServerTest.cpp
src/webinterface/: GUI.html  ros.js  script.js  stylesheet.css
srv/: add_manual.srv  add_object.srv  add_points.srv  box_filled.srv  collides.srv  collides_with.srv  delete_object.srv  save_env.srv  save_object.srv
webinterface/: GUI.html  objectserver.php  ros.js  script.js
